Java 11 to 8 downgrade